was added work to lesson 2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
-<app-users class="users-block"></app-users>
-<app-posts></app-posts>
+<p>
+  <a routerLink="users">users page</a>
+</p>
+<p>
+  <a routerLink="posts">posts page</a>
+</p>
+<p>
+  <a routerLink="comments">comments page</a>
+</p>
+
+<router-outlet></router-outlet>
