--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,4 +1,4 @@
 <div>
-  <h4>{{post.title}}  User Id:{{post.userId}}</h4>
-  <p>{{post.body}}</p>
+   {{post.title}}
+  <button (click)="navTo()">details</button>
 </div>
