was added work to lesson 3

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,8 @@
 <p>
   <a routerLink="comments">comments page</a>
 </p>
+<p>
+  <a routerLink="users-select">users form page</a>
+</p>
 
 <router-outlet></router-outlet>
