--- a/src/app/components/user-details/user-details.component.html
+++ b/src/app/components/user-details/user-details.component.html
@@ -1,2 +1,26 @@
 <!--<p>{{user?.id}} {{user?.name}} {{user?.email}}</p>-->
-<p>{{user.name}} - {{user.email}} - {{user.phone}}</p>
+<!--<p>{{user.name}} - {{user.email}} - {{user.phone}}</p>-->
+
+<div>
+  <h2>{{user.name}}, ID:{{user.id}}</h2>
+  <div>
+    Contact info:
+    <ul>
+      <li>email: {{user.email}};</li>
+      <li>phone: {{user.phone}};</li>
+      <li>website: {{user.website}};</li>
+    </ul>
+  </div>
+  <div>
+    Address: {{user.address.city}}, {{user.address.street}}, {{user.address.suite}};
+  </div>
+  <div>
+    <h4>Company: {{user.company.name}}</h4>
+    <p>{{user.company.catchPhrase}}</p>
+  </div>
+  <div>
+    <h3>Posts by User with ID:{{user.id}}</h3>
+    <app-post *ngFor="let post of postsUser" [post]="post"></app-post>
+  </div>
+</div>
+
