was added work to lesson 3

--- a/src/app/components/post-details/post-details.component.html
+++ b/src/app/components/post-details/post-details.component.html
@@ -1,1 +1,7 @@
-<p class="post-details">{{post?.body}}</p>
+<div class="post-details">
+  <p>User ID - {{post?.userId}}</p>
+  <p>Post ID - {{post?.id}}</p>
+  <p>Title: {{post?.title}}</p>
+  <p>{{post?.body}}</p>
+</div>
+
