--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,1 +1,1 @@
-<app-user *ngFor="let user of users" [user]="user" class="user-block"></app-user>
+<app-user *ngFor="let user of users" [user]="user"></app-user>
