was added work to lesson 4

--- a/src/app/components/user-details/user-details.component.html
+++ b/src/app/components/user-details/user-details.component.html
@@ -1,7 +1,7 @@
 <!--<p>{{user?.id}} {{user?.name}} {{user?.email}}</p>-->
 <!--<p>{{user.name}} - {{user.email}} - {{user.phone}}</p>-->
 
-<div>
+<div class="user-details">
   <h2>{{user.name}}, ID:{{user.id}}</h2>
   <div>
     Contact info:
